Actualizacion del diseño y semantica

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 			</article>
 
 			<article id="card5" class="card">
-				<h3>Cita por teléfono</h3>
+				<h3>Cita por Teléfono</h3>
 				<p>¿Prefieres el teléfono? Llama al <strong>01800 681 2525</strong> y agenda tu cita de manera rápida y
 					segura. El IMSS te atenderá todos los días del año por teléfono. Llama ahora y agenda tu cita en
 					menos de 5 minutos.
@@ -159,7 +159,7 @@
 					<img src="./Images/doctora.jfif" alt="">
 				</article>
 				<article>
-					<h2>Sandra ramirez cordoba .</h2>
+					<h2>Sandra Ramirez Cordoba .</h2>
 					<p>
 						Con la doctora sandra lejos de vivir una terrible experiencia pasaras gratos momentos en su
 						compañia, una chica de espiritu inquebrantable dispuesta a ayudar a sus pacientes hasta el
@@ -173,7 +173,7 @@
 					<img src="./Images/doctorPaciente.jfif" alt="">
 				</article>
 				<article>
-					<h2>Dr. juan manuel crevantez cruz</h2>
+					<h2>Dr. Juan Manuel Cervantez Cruz</h2>
 					<p>
 						Expero en el area pulmonar, traumatologia y servicios a la disposicion de las personas
 					</p>
@@ -185,7 +185,7 @@
 					<img src="./Images/Equipo.jfif" alt="">
 				</article>
 				<article>
-					<h2>te invitamos a visitarnos.</h2>
+					<h2>Te Invitamos a Visitarnos.</h2>
 					<p>
 						En hospitales Ckacalin S.A de C.V nos preocupanos por la salud e integridad de nuestros
 						pacientes, es nuestro trabajo y vocacion lograr que todos nuestros pacientes y sus familias se
